refactor(api): convert FastAPI to HTTP server handler and improve error handling
- Replace FastAPI with BaseHTTPRequestHandler for Vercel compatibility
- Add comprehensive error handling and logging throughout the code
- Simplify QR code decoding and TOTP generation logic
- Update requirements.txt with new dependencies
- Modify vercel.json configuration for new handler structure

--- a/vercel.json
+++ b/vercel.json
@@ -2,32 +2,30 @@
   "version": 2,
   "builds": [
     {
-      "src": "web/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "web/dist"
       }
     },
     {
-      "src": "api/*.py",
-      "use": "@vercel/python"
+      "src": "api/index.py",
+      "use": "@vercel/python",
+      "config": {
+        "runtime": "python3.9"
+      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/web/$1"
+      "dest": "/web/dist/$1"
     }
   ],
-  "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
-    }
-  },
   "env": {
     "PYTHONPATH": "."
   }
