--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.104.1
 opencv-python-headless==4.8.1.78
 pyotp==2.9.0
-protobuf==4.25.1
+protobuf>=4.25.1
 python-multipart==0.0.6
+numpy<2.0.0
+mangum==0.17.0
