--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-opencv-python-headless==4.8.1.78
+fastapi==0.116.1
+opencv-python-headless==4.12.0.88
 pyotp==2.9.0
-protobuf>=4.25.1
-python-multipart==0.0.6
+protobuf==6.32.0
+python-multipart==0.0.20
 numpy<2.0.0
 mangum==0.17.0
