--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-opencv-python>=4.8.0
-pyotp>=2.9.0
-protobuf>=4.21.0
-fastapi
-uvicorn[standard]
-python-multipart
+opencv-python==4.12.0.88
+pyotp==2.9.0
+protobuf==6.32.0
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+python-multipart==0.0.20
