--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,5 +3,5 @@ opencv-python-headless==4.12.0.88
 pyotp==2.9.0
 protobuf==6.32.0
 python-multipart==0.0.20
-numpy<2.0.0
+numpy>=2.0.0
 mangum==0.17.0
