--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.116.1
-opencv-python-headless==4.12.0.88
+pyzbar==0.1.9
+Pillow==10.0.0
 pyotp==2.9.0
 protobuf==6.32.0
 python-multipart==0.0.20
-numpy>=2.0.0
 mangum==0.17.0
