--- a/.vercelignore
+++ b/.vercelignore
@@ -1,42 +1,24 @@
-# Python cache
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Virtual environments
-venv/
-env/
-.venv/
-.env/
-
-# Node modules
-node_modules/
-
-# Build outputs
-web/dist/
-web/build/
+# Dependencies
+node_modules
 
 # Development files
-.DS_Store
-*.log
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Test files
-*.test.py
-test_*.py
-tests/
+test_qr_code.png
 
-# Documentation
-*.md
-!README.md
+# IDE
+.vscode
+.idea
+
+# OS
+.DS_Store
+Thumbs.db
