--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,11 @@
     "clsx": "2.1.1",
     "jsqr": "^1.4.0",
     "lucide-react": "0.294.0",
-    "otplib": "^12.0.1",
     "protobufjs": "^7.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-dropzone": "14.3.8"
+    "react-dropzone": "14.3.8",
+    "totp-generator": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "18.3.23",
