✨ feat: implement TOTP period extraction and QR code generation

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,11 @@ temp/
 *.spec.js
 coverage/
 
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
