--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "type": "git",
     "url": "https://github.com/your-username/TOTPdecode.git"
   },
-  "homepage": "https://totp-decoder.vercel.app"
+  "homepage": "https://totp-decoder.vercel.app",
+  "dependencies": {
+    "qrcode": "^1.5.4"
+  }
 }
