--- a/web/package.json
+++ b/web/package.json
@@ -11,27 +11,27 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
     "jsqr": "^1.4.0",
-    "lucide-react": "0.294.0",
+    "lucide-react": "^0.541.0",
     "protobufjs": "^7.5.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-dropzone": "14.3.8",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "totp-generator": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "4.7.0",
-    "autoprefixer": "10.4.21",
-    "eslint": "8.57.1",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-react-refresh": "0.4.20",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.1",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
-    "vite": "5.4.19"
+    "vite": "^7.0.0"
   }
 }
