--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.541.0",
     "protobufjs": "^7.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-i18next": "^15.7.2",
     "totp-generator": "^1.0.0"
   },
   "devDependencies": {
