🔧 chore: update build and dev scripts to run in web directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "devCommand": "npm run dev",
+  "buildCommand": "cd web && npm run build",
+  "outputDirectory": "web/dist",
+  "devCommand": "cd web && npm run dev",
+  "installCommand": "cd web && npm install",
   "rewrites": [
     {
       "source": "/(.*)",
