--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "vite build"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
